# gambling-tax-calculator

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-BUILD.md  README.md  STYLE_GUIDE.md  TODO.md  setup_config_files.sh  toolchain-windows.cmake
config/: federal_rules.cfg  state_rules.cfg
include/: ConsoleInterface.h  GamblingSession.h  TaxCalculator.h  TaxRulesConfig.h  UserProfile.h
src/: ConsoleInterface.cpp  GamblingSession.cpp  TaxCalculator.cpp  TaxRulesConfig.cpp  UserProfile.cpp  main.cpp
